Fixed the problem with the collapsing rows, it was a css config that was missing

--- a/minesweeper/src/App.css
+++ b/minesweeper/src/App.css
@@ -33,6 +33,10 @@ th {
   float: right;
 }
 
+tr {
+  height: 30px;
+}
+
 td.blank {
   width: 12px;
   height: 24px;
